--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
@@ -993,10 +993,15 @@ nav.navbar.bootsnav ul.nav li > a:hover {
     font-weight: 900;
     background-color: #fcd7aadc;
 }
-.toast-warning{
+.toast-warn{
     color: orangered;
     background-color:none;
 }
 .toast-added {
     color: forestgreen;
+    background-color: none;
+}
+.toast-err {
+    color: red;
+    background-color: none;
 }
