--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -226,7 +226,7 @@
         </div>
         <div id="productIndexNew" class="row special-list">
             @{
-                foreach (var item in Model.ToList().OrderByDescending(p => p.p上架時間).Take(4))
+                foreach (var item in Model.OrderByDescending(p => p.p上架時間).Take(4).ToList())
                 {
                         <!-- start prod  -->
                         <div class="col-lg-3 col-md-6 special-grid best-seller">
@@ -234,9 +234,12 @@
                                 <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
                                     <div class="box-img-hover">
                                         <div class="type-lb">
+                                        @if (item.p優惠價格 != null)
+                                        {
                                             <p class="sale">Sale</p>
+                                        }
                                         </div>
-                                        <img src="@item.p圖片路徑.FirstOrDefault()" class="img-fluid shop-image" alt="Image" />
+                                    <img src="@item.p圖片路徑.ToList().FirstOrDefault()" class="img-fluid shop-image" alt="Image" />
                                     </div>
                                 </a>
                                 <div class="why-text">
@@ -296,7 +299,7 @@
         </div>
         <div id="productIndexSale" class="row special-list">
             @{
-                foreach (var item in Model.OrderBy(p => p.p剩餘庫存).Take(4))
+                foreach (var item in Model.OrderBy(p => p.p剩餘庫存).Take(4).ToList())
                 {
                         <div class="col-lg-3 col-md-6 special-grid best-seller">
                             <div class="products-single-custom fix">
@@ -305,7 +308,7 @@
                                         <div class="type-lb">
                                             <p class="sale">Sale</p>
                                         </div>
-                                        <img src=@item.p圖片路徑.FirstOrDefault() class="img-fluid shop-image" alt="Image" />
+                                    <img src="@item.p圖片路徑.ToList().FirstOrDefault()" class="img-fluid shop-image" alt="Image" />
                                     </div>
                                 </a>
                                 <div class="why-text">
