客服聊天做完

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -118,7 +118,7 @@
             <li class="nav-item">
                 <a class="nav-link" asp-area="AdminCMS" asp-controller="Service" asp-action="Service">
                     <i class="fas fa-headset"></i>
-                    <span class="title">客服回覆</span>
+                    <span class="title">客訴回覆</span>
                 </a>
             </li>
 
@@ -139,9 +139,9 @@
                         <div class="center">
                             <ul class="sidebar-detail-ul">
                                 <li><a asp-area="AdminCMS" asp-controller="Banner" asp-action="Banner">Banner</a></li>
-                                <li><a asp-area="AdminCMS" asp-controller="Navbar" asp-action="Navbar">navbar</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="News" asp-action="News">公告消息</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="BanUser" asp-action="Index">禁言會員</a></li>
+                                <li><a asp-area="AdminCMS" asp-controller="Service" asp-action="CustomerResponse">客服聊天</a></li>
                             </ul>
                         </div>
                     </div>
