--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -60,7 +60,7 @@
 
     <div class="row mt-3">
         <div class="col-6 offset-6 text-end">
-            <button class="btn btn-success" data-bs-toggle="modal" href="#sendtoMember" role="button">
+            <button class="btn btn-success" data-bs-toggle="modal" href="#sendtoMember" role="button" id="sendtoMemberModalBtn">
                 補發遊戲商品
             </button>
         </div>
@@ -192,7 +192,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendToMember" id=" SendToMember"
+                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="btnSend" id=" btnSend"
                                     style="width: 50%;">
                                 發送
                             </button>
@@ -744,68 +744,74 @@
                 $checkboxes.prop('checked', true);
                 selectedids = [];
                 $checkboxes.each(function () {
-                    var idValue = $(this).data('productId');
+                    var idValue = $(this).data('id'); // 修正这里
                     selectedids.push(idValue);
                 });
             }
 
             console.log('選擇的商品id:', selectedids);
         });
-
+        //單選按鈕
         $('#GProduct-table tbody').on('change', '.row-checkbox', function () {
             var isChecked = $(this).is(':checked');
             var $row = $(this).closest('tr');
-            var idValue = $(this).data('productId'); 
+            var idValue = $(this).data('id');
             if (isChecked) {
                 $row.find('td').addClass('selected-cell');
-                selectedids.push(idValue); 
+                selectedids.push(idValue);
                 console.log('選擇的商品id:', selectedids);
             } else {
                 $row.find('td').removeClass('selected-cell');
                 var index = selectedids.indexOf(idValue);
                 if (index !== -1) {
-                    selectedids.splice(index, 1); 
+                    selectedids.splice(index, 1);
                     console.log('選擇的商品id:', selectedids);
                 }
             }
         });
 
-        //發送至會員-依MemberID
+        //發送至會員
         $(document).ready(function () {
-            $(document).on("click", ".SendToMember", function () {
-                var productId = $(this).data("id");
-                var memberId = $("#sent-memberID").val(); // 獲取輸入的 MemberId
+            var selectedProductId = null;
 
-                Swal.fire({
-                    title: '確定要發送商品嗎?',
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: '確認發送'
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        $.ajax({
-                            url: "/AdminCMS/GameProduct/SendCouponToMembersByID",
-                            type: "POST",
-                            data: { id: couponId, memberId: memberId }, // 傳遞 MemberId 到後端
-                            success: function (response) {
-                                if (response.success) {
-                                    console.log("發送成功");
-                                    $('#sendtoMember').modal('hide');
-                                } else {
-                                    console.log("發送失敗");
-                                }
-                            },
-                            error: function (error) {
-                                console.log("發生錯誤：", error);
+            $('#GProduct-table tbody').on('change', '.row-checkbox', function () {
+                var isChecked = $(this).is(':checked');
+                var $row = $(this).closest('tr');
+                selectedProductId = isChecked ? $row.data('id') : null;
+            });
+
+            $('#sendtoMemberModalBtn').on('click', function () {
+                if (selectedProductId !== null) {
+                    $("#sent-memberID").val(selectedProductId);
+                    $('#sendtoMember').modal('show');
+                }
+            });
+
+            $('#btnSend').on('click', function () {
+                var memberId = $("#sent-memberID").val();
+                console.log('memberId:', memberId);
+                console.log('selectedProductId:', selectedProductId);
+
+                if (selectedProductId !== null && memberId !== "") {
+                    $.ajax({
+                        url: "/AdminCMS/GameProduct/SendProductToMemberByID",
+                        type: "POST",
+                        data: { id: selectedProductId, memberId: memberId },
+                        success: function (response) {
+                            if (response.success) {
+                                console.log("發送成功");
+                                $('#sendtoMember').modal('hide');
+                            } else {
+                                console.log("發送失败");
                             }
-                        });
-                    }
-                });
+                        },
+                        error: function (error) {
+                            console.log("發生錯誤：", error);
+                        }
+                    });
+                }
             });
         });
-
         
     </script>
 }
