修改關於我們的組員姓氏XD

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/About/About.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/About/About.cshtml
@@ -124,7 +124,7 @@
                     <div class="our-team">
                         <img src="https://lh3.googleusercontent.com/pw/AIL4fc833LbziQ-tl2LLc14bISDt8Hv-3wCyt2siwYZtC-NAUZ9rybPcww9T8244BDl_ZkZPTfXfurAV_IkpFdfnsNSWgeVgZc3ubnYANjmMRoxJMN_mdDE=w600" alt="" />
                         <div class="team-content">
-                            <h3 class="title">羅耀霖</h3> <span class="post">Full-Stack Developer</span>
+                            <h3 class="title">莊耀霖</h3> <span class="post">Full-Stack Developer</span>
                         </div>
                     <div class="icon"> <i class="fa fa-paw" aria-hidden="true"></i> </div>
                     </div>
