--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -63,7 +63,7 @@
                 <h2>填寫結帳資料</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a asp-controller="Index" asp-action="Index">首頁</a></li>
-                    <li class="breadcrumb-item active">結帳</li>
+                    <li class="breadcrumb-item active">填寫結帳資料</li>
                 </ul>
             </div>
         </div>
@@ -1187,49 +1187,14 @@
                         <hr>
                     }
                 </div>
-            </div>
-            <!--導至綠界付款的隱藏頁面-->
-            <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
-                <!--step2 : 收到後端的值印出來-->
                 <div class=" coupon-box-btn col-12 d-flex shopping-box ">
                     <button type="submit" id="submit-order-btn"
                             class=" checkout-btn ml-auto btn hvr-hover">
-                        送出訂單
+                        確認訂單
                     </button>
                 </div>
-                <div >
-                    @if (Model != null)
-                    {
-                        <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
-                        <input type="text" name="MerchantTradeDate" value="@Model.keyValuePairs["MerchantTradeDate"]" />
-                        <input type="text" name="TotalAmount" value="@Model.keyValuePairs["TotalAmount"]" />
-                        <input type="text" name="TradeDesc" value="@Model.keyValuePairs["TradeDesc"]" />
-                        <input type="text" name="ItemName" value="@Model.keyValuePairs["ItemName"]" />
-                        <input type="text" name="ExpireDate" value="@Model.keyValuePairs["ExpireDate"]" />
-                        <input type="text" name="CustomField1" value="@Model.keyValuePairs["CustomField1"]" />
-                        <input type="text" name="CustomField2" value="@Model.keyValuePairs["CustomField2"]" />
-                        <input type="text" name="CustomField3" value="@Model.keyValuePairs["CustomField3"]" />
-                        <input type="text" name="CustomField4" value="@Model.keyValuePairs["CustomField4"]" />
-                        <input type="text" name="ReturnURL" value="@Model.keyValuePairs["ReturnURL"]" />
-                        <input type="text" name="OrderResultURL" value="@Model.keyValuePairs["OrderResultURL"]" />
-                        <input type="text" name="PaymentInfoURL" value="@Model.keyValuePairs["PaymentInfoURL"]" />
-                        <input type="text" name="ClientRedirectURL" value="@Model.keyValuePairs["ClientRedirectURL"]" />
-                        <input type="text" name="MerchantID" value="@Model.keyValuePairs["MerchantID"]" />
-                        <input type="text" name="IgnorePayment" value="@Model.keyValuePairs["IgnorePayment"]" />
-                        <input type="text" name="PaymentType" value="@Model.keyValuePairs["PaymentType"]" />
-                        <input type="text" name="ChoosePayment" value="@Model.keyValuePairs["ChoosePayment"]" />
-                        <input type="text" name="EncryptType" value="@Model.keyValuePairs["EncryptType"]" />
-                        <input type="text" name="CheckMacValue" value="@Model.keyValuePairs["CheckMacValue"]" />
-                       @* @foreach (var key in @Model.keyValuePairs.Keys.ToList())
-                        {
-                            @(key) <input type="text" name="@key" value="@Model.keyValuePairs[key]" />
-
-                            <br />
-                        }
-                        @*<button type="submit" id="checkoutBtn">送出</button>*@
-                    }
-                </div>
-            </form>
+            </div>
+            
         </div>
     </div>
 </div>
@@ -1242,15 +1207,11 @@
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <!--引用分離(Separate)-->
-    @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
             integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
             crossorigin="anonymous"></script>
     <!---->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    @*<script src="~/js/jquery-3.2.1.min.js"></script>*@
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
@@ -1264,36 +1225,10 @@
     <script src="~/js/baguetteBox.min.js"></script>
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
-    @*<script src="~/js/custom.js"></script>*@
     <!--nav導覽與頁籤使用-->
-    @*<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>*@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="~/js/checkout.js"></script>
-   
-
-    @* <script>
-        $(document).ready(function () {
-            $("#choose711CVS").click(function () {
-                $.ajax({
-                    Headers: 'Access-Control-Allow-Origin: *',
-                    type: 'POST',
-                    url: 'https://logistics-stage.ecpay.com.tw/Express/Create', // API 串接網址
-                    contentType: 'application / x - www - form - urlencoded',
-                    success: function (response) {
-                        // 處理成功回應
-                        console.log(response);
-                        // 在這裡可以處理 API 回應，例如顯示在頁面上
-                    },
-                    error: function (error) {
-                        // 處理錯誤回應
-                        console.log(error);
-                        // 在這裡可以處理錯誤情況，例如顯示錯誤訊息
-                    },
-                });
-            });
-        });
-    </script>*@
-
+  
 }
 
 
