--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -1,104 +1,107 @@
-﻿
+﻿@using System.Text.Json;
+@using prjCatChaOnlineShop.Models.CDictionary;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@model prjCatChaOnlineShop.Models.ViewModels.CCheckoutViewModel
+
 @{
     ViewData["Title"] = "Pay";
     Layout = "~/Views/Shared/CatCha_Layout.cshtml";
 }
 
 @section Styles{
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<link rel="stylesheet" href="~/css/bootstrap.min.css">
-<!-- Site CSS -->
-<link rel="stylesheet" href="~/css/style.css">
-<!-- Responsive CSS -->
-<link rel="stylesheet" href="~/css/responsive.css">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="~/css/custom.css">
-<!--myCss-->
-<link rel="stylesheet" href="~/css/myCss.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="~/css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="~/css/responsive.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="~/css/custom.css">
+    <!--myCss-->
+    <link rel="stylesheet" href="~/css/myCss.css">
 }
 
 <!-- Start All Title Box -->
-    <div class="all-title-box-picture all-title-box">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>結帳完成</h2>
-                    <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a asp-controller="Index" asp-action="Index">首頁</a></li>
-                        <li class="breadcrumb-item active">結帳完成</li>
-                    </ul>
-                </div>
+<div class="all-title-box-picture all-title-box">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>結帳完成</h2>
+                <ul class="breadcrumb">
+                    <li class="breadcrumb-item"><a asp-controller="Index" asp-action="Index">首頁</a></li>
+                    <li class="breadcrumb-item active">結帳完成</li>
+                </ul>
             </div>
         </div>
     </div>
-    <!-- End All Title Box -->
-    <!--中間主畫面Start-->
-    <div class="cart-box-main">
-        <div class="container" style="max-width: 800px; margin: 0 auto;">
-            <!--導至綠界付款的隱藏頁面-->
-            <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
-                <!--step2 : 收到後端的值印出來-->
-                <div class=" coupon-box-btn col-12 d-flex shopping-box ">
-                    <button type="submit" id="gopay"
-                            class=" checkout-btn ml-auto btn hvr-hover">
-                        送出訂單
-                    </button>
-                </div>
-                <div >
+</div>
+<!-- End All Title Box -->
+<!--中間主畫面Start-->
+<div class="cart-box-main">
+    <div class="container" style="max-width: 800px; margin: 0 auto;">
+        <!--導至綠界付款的隱藏頁面-->
+        <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
+            <!--step2 : 收到後端的值印出來-->
+            <div class=" coupon-box-btn col-12 d-flex shopping-box ">
+                <button type="submit" id="gotopay"
+                        class=" checkout-btn ml-auto btn hvr-hover">
+                    送出訂單
+                </button>
+            </div>
+            <div>
                 @if (Model != null)
                 {
-                            <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
-                            <input type="text" name="MerchantTradeDate" value="@Model.keyValuePairs["MerchantTradeDate"]" />
-                            <input type="text" name="TotalAmount" value="@Model.keyValuePairs["TotalAmount"]" />
-                            <input type="text" name="TradeDesc" value="@Model.keyValuePairs["TradeDesc"]" />
-                            <input type="text" name="ItemName" value="@Model.keyValuePairs["ItemName"]" />
-                            <input type="text" name="ExpireDate" value="@Model.keyValuePairs["ExpireDate"]" />
-                            <input type="text" name="CustomField1" value="@Model.keyValuePairs["CustomField1"]" />
-                            <input type="text" name="CustomField2" value="@Model.keyValuePairs["CustomField2"]" />
-                            <input type="text" name="CustomField3" value="@Model.keyValuePairs["CustomField3"]" />
-                            <input type="text" name="CustomField4" value="@Model.keyValuePairs["CustomField4"]" />
-                            <input type="text" name="ReturnURL" value="@Model.keyValuePairs["ReturnURL"]" />
-                            <input type="text" name="OrderResultURL" value="@Model.keyValuePairs["OrderResultURL"]" />
-                            <input type="text" name="PaymentInfoURL" value="@Model.keyValuePairs["PaymentInfoURL"]" />
-                            <input type="text" name="ClientRedirectURL" value="@Model.keyValuePairs["ClientRedirectURL"]" />
-                            <input type="text" name="MerchantID" value="@Model.keyValuePairs["MerchantID"]" />
-                            <input type="text" name="IgnorePayment" value="@Model.keyValuePairs["IgnorePayment"]" />
-                            <input type="text" name="PaymentType" value="@Model.keyValuePairs["PaymentType"]" />
-                            <input type="text" name="ChoosePayment" value="@Model.keyValuePairs["ChoosePayment"]" />
-                            <input type="text" name="EncryptType" value="@Model.keyValuePairs["EncryptType"]" />
-                            <input type="text" name="CheckMacValue" value="@Model.keyValuePairs["CheckMacValue"]" />
+                    <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
+                    <input type="text" name="MerchantTradeDate" value="@Model.keyValuePairs["MerchantTradeDate"]" />
+                    <input type="text" name="TotalAmount" value="@Model.keyValuePairs["TotalAmount"]" />
+                    <input type="text" name="TradeDesc" value="@Model.keyValuePairs["TradeDesc"]" />
+                    <input type="text" name="ItemName" value="@Model.keyValuePairs["ItemName"]" />
+                    <input type="text" name="ExpireDate" value="@Model.keyValuePairs["ExpireDate"]" />
+                    <input type="text" name="CustomField1" value="@Model.keyValuePairs["CustomField1"]" />
+                    <input type="text" name="CustomField2" value="@Model.keyValuePairs["CustomField2"]" />
+                    <input type="text" name="CustomField3" value="@Model.keyValuePairs["CustomField3"]" />
+                    <input type="text" name="CustomField4" value="@Model.keyValuePairs["CustomField4"]" />
+                    <input type="text" name="ReturnURL" value="@Model.keyValuePairs["ReturnURL"]" />
+                    <input type="text" name="OrderResultURL" value="@Model.keyValuePairs["OrderResultURL"]" />
+                    <input type="text" name="PaymentInfoURL" value="@Model.keyValuePairs["PaymentInfoURL"]" />
+                    <input type="text" name="ClientRedirectURL" value="@Model.keyValuePairs["ClientRedirectURL"]" />
+                    <input type="text" name="MerchantID" value="@Model.keyValuePairs["MerchantID"]" />
+                    <input type="text" name="IgnorePayment" value="@Model.keyValuePairs["IgnorePayment"]" />
+                    <input type="text" name="PaymentType" value="@Model.keyValuePairs["PaymentType"]" />
+                    <input type="text" name="ChoosePayment" value="@Model.keyValuePairs["ChoosePayment"]" />
+                    <input type="text" name="EncryptType" value="@Model.keyValuePairs["EncryptType"]" />
+                    <input type="text" name="CheckMacValue" value="@Model.keyValuePairs["CheckMacValue"]" />
                     @* @foreach (var key in @Model.keyValuePairs.Keys.ToList())
-                        {
-                            @(key) <input type="text" name="@key" value="@Model.keyValuePairs[key]" />
+                {
+                @(key) <input type="text" name="@key" value="@Model.keyValuePairs[key]" />
 
-                            <br />
-                        }
-                        @*<button type="submit" id="checkoutBtn">送出</button>*@
+                <br />
                 }
-                </div>
-            </form>
-        </div>
+                @*<button type="submit" id="checkoutBtn">送出</button>*@
+                }
+            </div>
+        </form>
     </div>
-    <!--中間主畫面End-->
-
+</div>
+<!--中間主畫面End-->
 @section Scripts{
-     <!-- ALL JS FILES -->
+    <!-- ALL JS FILES -->
     <!--引用Bundle，這樣nav導覽與頁籤就可以使用-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
     <!--引用分離(Separate)-->
-   @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
-        crossorigin="anonymous"></script>
+            integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
+            crossorigin="anonymous"></script>
     <!---->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="~/js/jquery-3.2.1.min.js"></script>
@@ -120,5 +123,52 @@
     <script src="~/js/myScript.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script>
+        // 監聽送出訂單按鈕的點擊事件
+        $('#gotopay').click(function (e) {
+                 e.preventDefault(); /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
+                console.log("阿囉哈你好嗎可以讓我過關嗎^_^??")
+                let formData = $("#ecpayform").serializeArray();
+                var json = {};
+                $.each(formData, function () {
+                    json[this.name] = this.value || "";
+                });
+                console.log(json); /*F12 -> console*/
+                //step3 : 新增訂單到資料庫
+                $.ajax({
+                    type: 'POST',
+                    url: 'https://localhost:7218/Ecpay/AddOrders',
+                    contentType: 'application/json; charset=utf-8',
+                    data: JSON.stringify(json),
+                    success: function (res) {
+                        console.log(res);
+
+                        var memberId = $("#MemberId").text();
+                        var couponId = $("#CouponId").text();
+                        console.log("會員ID", memberId)
+                        console.log("會員優惠券", couponId)
+                        $.ajax({
+                            type: 'POST',
+                            url: '/CheckOut/AddNewOrder',
+                            data:
+                            {
+                                MemberId: memberId,
+                                CouponId: couponId,
+                            },
+                            success: function (res) {
+                                // 處理成功回應
+                            },
+                            error: function (err) {
+                                // 處理錯誤回應
+                            },
+                        });
+                    },
+                    error: function (err) { console.log(err); },
+                });
+
+            }
+
+        });
+    </script>
 }
 
