--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -8,6 +8,7 @@
     <link href="~/css/game/gameinstructions.css" rel="stylesheet" />
     <link href="~/css/game/gachabutton.css" rel="stylesheet" />
     <link href="~/css/game/confirmWin.css" rel="stylesheet" />
+    <link href="~/css/game/tutorial.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" />
     <style>
         #sidebar {
@@ -213,11 +214,16 @@
         <!-- Start Canvas遊戲畫布 -->
        
         <div id="tutorial">
+            <div id="tutorial-container">
              <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
-            <div class="tutorial-pagination">
-                <span class="dot active" style="width:50px; position:absolute;   " ></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+                <div class="tutorial-pagination">
+                    <span class="dot active" ></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
             </div>
         </div>
 
@@ -318,6 +324,8 @@
     <script src="~/js/game/loadImages.js"></script>
     <script src="~/js/game/instructions.js"></script>
     <script src="~/js/game/catFeed.js"></script>
+    <script src="~/js/game/taskFunction.js"></script>
+        
 
     <!--排行榜測試資料-->
     <script>
