--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -2,7 +2,15 @@
 @using prjCatChaOnlineShop.Models.CDictionary;
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @model prjCatChaOnlineShop.Models.ViewModels.CCheckoutViewModel
+@{
+    var jsonString = HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_LOINGED_USER);
+    ShopMemberInfo memberinfo = null;
 
+    if (jsonString != null)
+    {
+        memberinfo = JsonSerializer.Deserialize<ShopMemberInfo>(jsonString);
+    }
+}
 @{
     ViewData["Title"] = "Pay";
     Layout = "~/Views/Shared/CatCha_Layout.cshtml";
@@ -44,6 +52,12 @@
 <!--中間主畫面Start-->
 <div class="cart-box-main">
     <div class="container" style="max-width: 800px; margin: 0 auto;">
+        @if (HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_LOINGED_USER) != null && Model != null)
+        {
+            <div id="MemberId" hidden> @memberinfo.MemberId </div>
+        
+        }
+
         <!--導至綠界付款的隱藏頁面-->
         <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
             <!--step2 : 收到後端的值印出來-->
@@ -123,52 +137,49 @@
     <script src="~/js/myScript.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="~/js/pay.js"></script>
     <script>
         // 監聽送出訂單按鈕的點擊事件
-        $('#gotopay').click(function (e) {
-                 e.preventDefault(); /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
-                console.log("阿囉哈你好嗎可以讓我過關嗎^_^??")
-                let formData = $("#ecpayform").serializeArray();
-                var json = {};
-                $.each(formData, function () {
-                    json[this.name] = this.value || "";
-                });
-                console.log(json); /*F12 -> console*/
-                //step3 : 新增訂單到資料庫
-                $.ajax({
-                    type: 'POST',
-                    url: 'https://localhost:7218/Ecpay/AddOrders',
-                    contentType: 'application/json; charset=utf-8',
-                    data: JSON.stringify(json),
-                    success: function (res) {
-                        console.log(res);
+        $('#gotopay').on('click', (e) => {
+            e.preventDefault(); /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
+            console.log("嚴重折壽耶^_^")
+            let formData = $("#ecpayform").serializeArray();
+            var json = {};
+            $.each(formData, function () {
+                json[this.name] = this.value || "";
+            });
+            console.log(json); /*F12 -> console*/
+            //step3 : 新增訂單到資料庫
+            $.ajax({
+                type: 'POST',
+                url: 'https://localhost:7218/Ecpay/AddOrders',
+                contentType: 'application/json; charset=utf-8',
+                data: JSON.stringify(json),
+                success: function (res) {
+                    console.log(res);
+                    var memberId = $("#MemberId").text();
+                    console.log("會員ID", memberId)
+                    $.ajax({
+                        type: 'POST',
+                        url: '/CheckOut/AddNewOrder',
+                        data:
+                        {
+                            MemberId: memberId,
+                         
+                        },
+                        success: function (res) {
+                            // 處理成功回應
+                        },
+                        error: function (err) {
+                            // 處理錯誤回應
+                        },
+                    });
+                },
+                error: function (err) { console.log(err); },
+            });
 
-                        var memberId = $("#MemberId").text();
-                        var couponId = $("#CouponId").text();
-                        console.log("會員ID", memberId)
-                        console.log("會員優惠券", couponId)
-                        $.ajax({
-                            type: 'POST',
-                            url: '/CheckOut/AddNewOrder',
-                            data:
-                            {
-                                MemberId: memberId,
-                                CouponId: couponId,
-                            },
-                            success: function (res) {
-                                // 處理成功回應
-                            },
-                            error: function (err) {
-                                // 處理錯誤回應
-                            },
-                        });
-                    },
-                    error: function (err) { console.log(err); },
-                });
+        })
 
-            }
-
-        });
     </script>
 }
 
